kube/grafana/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: fg2it/grafana-armhf:v5.0.0-beta1
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /
            port: 3000
        volumeMounts:
        - name: grafana-config
          mountPath: /grafana-config
      volumes:
      - name: grafana-config
        persistentVolumeClaim:
          claimName: grafana-nfs

---
kind: Service
apiVersion: v1
metadata:
  name: grafana
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: grafana.gwartz.me
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
